--- a/frontend/lang/en.json
+++ b/frontend/lang/en.json
@@ -16,6 +16,7 @@
     "qa_doctors": "Doctors",
     "qa_specialties": "Specialties",
     "qa_lab": "Lab Tests",
+    "qa_request_quote": "Request Quote",
     "qa_pharmacy": "Pharmacy",
     "qa_portal": "Dashboard",
     "why_title": "Why MedConnect?",
@@ -23,9 +24,9 @@
     "why_booking": "Easy appointment booking",
     "why_monitoring": "Real-time monitoring",
     "why_bilingual": "Bilingual support (EN/FR)",
-    "doctors_title": "Featured Doctors",
+    "doctors_title_featured": "Featured Doctors",
     "btn_view_profile": "View Profile",
-    "notices_title": "Notices & Tips",
+    "notices_page_title": "Notices – MedConnect",
     "notice_flu": "Flu shots available this week.",
     "notice_lab": "Lab open on Saturday from 8:00–12:00.",
     "notice_app": "Download our MedConnect app for easier booking.",
@@ -39,9 +40,9 @@
     "doctors_title": "Find a Doctor",
     "search_placeholder": "Search by name...",
     "filter_all": "All Specialties",
-    "spec_cardiology": "Cardiology",
-    "spec_dermatology": "Dermatology",
-    "spec_pediatrics": "Pediatrics",
+    "spec_cardiology_role": "Cardiologist",
+    "spec_dermatology_role": "Dermatologist",
+    "spec_pediatrics_role": "Pediatrician",
     "doc_smith": "Dr. Jane Smith",
     "doc_lee": "Dr. Michael Lee",
     "doc_patel": "Dr. Aisha Patel",
@@ -94,7 +95,7 @@
     "about_value3": "Innovation in healthcare solutions.",
     "about_value4": "Respect and inclusivity for all communities.",
     "contact_title": "Contact Us",
-    "contact_intro": "Have questions or need assistance? Get in touch with us using the form below or via our contact details.",
+    "contact_intro": "Please enter your details and we'll get back to you.",
     "label_message": "Message",
     "btn_send": "Send Message",
     "contact_info": "Our Contact Details",
@@ -106,7 +107,7 @@
     "notice2_desc": "Our lab will remain open on Saturday from 8:00 AM to 12:00 PM.",
     "notice3_title": "MedConnect App",
     "notice3_desc": "Download our mobile app for easier booking and faster results access.",
-    "privacy": "Privacy Policy",
+    "privacy_politic": "Privacy Policy",
   "privacy_intro": "We value your privacy and are committed to protecting your personal data.",
   "privacy_data_title": "Data We Collect",
   "privacy_data_text": "We collect personal information such as your name, email, phone number, and medical details when you use our services.",
@@ -114,12 +115,153 @@
   "privacy_usage_text": "Your information is used to book appointments, provide healthcare services, and improve our platform.",
   "privacy_security_title": "Data Security",
   "privacy_security_text": "We implement strict measures to ensure your data is stored securely and accessed only by authorized personnel.",
-  "terms": "Terms of Service",
+  "terms_page_title": "Terms of Service – MedConnect",
   "terms_page_intro": "By using MedConnect, you agree to the following terms and conditions.",
   "terms_page_section1_title": "Use of Services",
   "terms_page_section1_text": "MedConnect provides healthcare management tools for patients and providers. You agree to use these services responsibly and in accordance with applicable laws.",
   "terms_page_section2_title": "User Responsibilities",
   "terms_page_section2_text": "You are responsible for providing accurate personal information and keeping your login credentials secure.",
   "terms_page_section3_title": "Limitation of Liability",
-  "terms_page_section3_text": "MedConnect is not liable for any medical outcomes. Services are provided as a platform to connect patients with healthcare providers."
+  "terms_page_section3_text": "MedConnect is not liable for any medical outcomes. Services are provided as a platform to connect patients with healthcare providers.",
+  "btn_view": "View",
+  "btn_cancel": "Cancel",
+  "confirm_cancel_appt": "Cancel this appointment?",
+  "cancel_failed": "Unable to cancel appointment.",
+  "cancel_success": "Appointment cancelled.",
+  "about_page_title": "About Us – MedConnect",
+  "appt_title": "Book an Appointment",
+  "btn_back": "Back",
+  "btn_next": "Next",
+  "confirm_msg": "Please review your details before confirming:",
+  "contact_page_title": "Contact Us – MedConnect",
+  "dashboard_appointments": "Appointments",
+  "dashboard_intro": "Loading your dashboard...",
+  "dashboard_no_appointments": "No appointments to display.",
+  "dashboard_no_reports": "No lab reports to display.",
+  "dashboard_page_title": "Dashboard – MedConnect",
+  "dashboard_reports": "Lab Reports",
+  "dashboard_title": "Dashboard",
+  "doctor_profile": "Doctor Profile – MedConnect",
+  "doctors_page_title": "Find Doctors – MedConnect",
+  "label_date": "Date",
+  "label_doctor": "Doctor",
+  "label_phone_number": "Phone Number",
+  "label_specialty": "Specialty",
+  "label_time": "Time",
+  "labs_page_title": "Lab Services – MedConnect",
+  "loading": "Loading...",
+  "nav_menu": "Main Menu",
+  "nav_account": "Account",
+  "nav_portal": "Login",
+  "opt_select_doctor": "-- Select Doctor --",
+  "opt_select_specialty": "-- Select Specialty --",
+  "opt_select_time": "-- Select Time --",
+  "pharmacy_page_title": "Pharmacy – MedConnect",
+  "portal_page_title": "Patient Portal – MedConnect",
+  "privacy_page_title": "Privacy Policy – MedConnect",
+  "qa_dashboard": "Dashboard",
+  "step_confirm": "4. Confirm",
+  "step_date": "2. Date",
+  "step_doctor": "1. Doctor",
+  "step_patient": "3. Patient",
+  "th_action": "Action",
+  "th_date": "Date",
+  "th_file": "File",
+  "th_name": "Name",
+  "th_patient": "Patient",
+  "th_phone": "Phone",
+  "th_status": "Status",
+  "th_time": "Time",
+  "th_type": "Type",
+  "th_uploaded": "Uploaded",
+  "api_missing": "Service is temporarily unavailable.",
+  "doctors_empty": "No doctors found.",
+  "doctors_load_error": "Unable to load doctors.",
+  "labs_error": "Unable to load packages.",
+  "labs_loading": "Loading packages...",
+  "labs_includes": "Includes",
+  "labs_show_all": "Show all",
+  "labs_show_less": "Show less",
+  "labs_request_quote": "Request quote",
+  "labs_preparation_default": "Preparation: not specified",
+  "contact_type_required": "Type is required.",
+  "contact_type_invalid": "Select a valid enquiry type.",
+  "contact_first_required": "First name is required.",
+  "contact_last_required": "Last name is required.",
+  "contact_email_required": "Email is required.",
+  "contact_email_invalid": "Enter a valid email address.",
+  "contact_phone_required": "Phone number is required.",
+  "contact_phone_invalid": "Enter a valid phone number.",
+  "contact_message_required": "Message is required.",
+  "contact_consent_required": "Consent is required.",
+  "contact_sending": "Sending...",
+  "contact_submit": "Submit",
+  "contact_success": "Message sent successfully.",
+  "contact_error": "Unable to send message.",
+  "rq_file_required": "File is required",
+  "rq_file_types": "Accepted file types: pdf, jpg, jpeg, png.",
+  "rq_file_size": "File exceeds 5 MB.",
+  "rq_file_empty": "File is empty.",
+  "rq_only_one_file": "Only one file is allowed.",
+  "rq_first_required": "First name is required.",
+  "rq_last_required": "Last name is required.",
+  "rq_gender_required": "Gender is required.",
+  "rq_dob_required": "Date of birth is required.",
+  "rq_phone_required": "Phone number is required.",
+  "rq_phone_invalid": "Enter a valid phone number.",
+  "rq_email_required": "Email is required.",
+  "rq_email_invalid": "Enter a valid email address.",
+  "rq_categories_required": "Select at least one service category.",
+  "rq_message_required": "Message is required.",
+  "rq_consent_required": "Consent is required.",
+  "rq_id_required": "Identity document is required.",
+  "rq_submitting": "Submitting...",
+  "rq_submit_error": "Unable to submit request.",
+  "rq_submit_success": "Request submitted successfully.",
+  "rq_submit": "Submit",
+  "portal_login_failed": "Login failed",
+  "portal_register_failed": "Registration failed",
+  "portal_forgot_email_required": "Email is required.",
+  "portal_forgot_sending": "Sending...",
+  "portal_forgot_submit": "Submit",
+  "portal_forgot_error": "Unable to submit request.",
+  "portal_forgot_success": "Your request has been received. We will contact you soon.",
+  "appt_missing_fields": "Missing required fields: ",
+  "appt_forbidden": "You are not allowed to create an appointment with this account.",
+  "appt_time_unavailable": "Selected time is no longer available. Please choose another slot.",
+  "appt_error_booking": "Error booking appointment: ",
+  "appt_unknown_error": "Unknown error",
+  "appt_unexpected_response": "Appointment booked, but response was unexpected.",
+  "appt_complete_required": "Please complete the required fields.",
+  "appt_doctors_load_error": "Unable to load doctors list.",
+  "appt_doctor_unavailable_day": "Doctor is not available on this day.",
+  "appt_confirm": "Confirm",
+  "appt_next": "Next",
+  "dashboard_load_error": "We could not load your dashboard. Please log in again.",
+  "dashboard_intro_doctor": "Your schedule and patient actions are ready.",
+  "dashboard_intro_admin": "System oversight and management tools are available.",
+  "dashboard_intro_patient": "Your upcoming appointments and reports are ready.",
+  "dashboard_nav_appointments": "Appointments",
+  "dashboard_nav_reports": "Lab Reports",
+  "dashboard_nav_summary": "Summary",
+  "dashboard_nav_doctors": "Doctors",
+  "dashboard_nav_quotes": "Quote Requests",
+  "dashboard_load_appointments_error": "Unable to load appointments.",
+  "dashboard_load_reports_error": "Unable to load lab reports.",
+  "dashboard_appt_details": "Appointment details",
+  "doc_profile_page_title": "Doctor Profile - MedConnect",
+  "doc_profile_working_hours": "Working hours",
+  "doc_profile_professional_details": "Professional details",
+  "doc_profile_experience": "Experience",
+  "doc_profile_certifications": "Certifications",
+  "doc_profile_specialisations": "Specialisations",
+  "doc_profile_about": "About",
+  "doc_profile_book": "Book appointment",
+  "doc_profile_cta_title": "Ready to book?",
+  "doc_profile_cta_body": "Schedule an appointment with this doctor in minutes.",
+  "doc_profile_not_found": "Doctor not found",
+  "doc_profile_not_found_body": "We couldn't find this doctor profile. Please return to the doctors page.",
+  "doc_profile_back": "Back to doctors",
+  "doc_profile_not_specified": "Not specified",
+  "doc_profile_unknown": "Doctor"
 }
