--- a/frontend/lang/fr.json
+++ b/frontend/lang/fr.json
@@ -10,38 +10,39 @@
   "spec_pediatrics": "Pédiatrie",
   "spec_pediatrics_desc": "Soins de santé pour les nourrissons, enfants et adolescents, axés sur la croissance et la prévention.",
   "btn_view_doctors": "Voir les médecins",
-   "hero_title": "Your care, connected.",
-  "cta_book": "Book an appointment",
-  "link_find_doctor": "Find a doctor",
-  "qa_doctors": "Doctors",
-  "qa_specialties": "Specialties",
-  "qa_lab": "Lab Tests",
-  "qa_pharmacy": "Pharmacy",
+  "hero_title": "Vos soins, connectés.",
+  "cta_book": "Prendre un rendez-vous",
+  "link_find_doctor": "Trouver un médecin",
+  "qa_doctors": "Médecins",
+  "qa_specialties": "Spécialités",
+  "qa_lab": "Analyses de laboratoire",
+  "qa_request_quote": "Demander un devis",
+  "qa_pharmacy": "Pharmacie",
   "qa_portal": "Tableau de bord",
-  "why_title": "Why MedConnect?",
-  "why_secure": "Secure patient records",
-  "why_booking": "Easy appointment booking",
-  "why_monitoring": "Real-time monitoring",
-  "why_bilingual": "Bilingual support (EN/FR)",
-  "doctors_title": "Featured Doctors",
-  "btn_view_profile": "View Profile",
-  "notices_title": "Notices & Tips",
-  "notice_flu": "Flu shots available this week.",
-  "notice_lab": "Lab open on Saturday from 8:00–12:00.",
-  "notice_app": "Download our MedConnect app for easier booking.",
+  "why_title": "Pourquoi MedConnect ?",
+  "why_secure": "Dossiers patients sécurisés",
+  "why_booking": "Prise de rendez-vous facile",
+  "why_monitoring": "Suivi en temps réel",
+  "why_bilingual": "Support bilingue (EN/FR)",
+  "doctors_title_featured": "Médecins en vedette",
+  "btn_view_profile": "Voir le profil",
+  "notices_page_title": "Annonces – MedConnect",
+  "notice_flu": "Vaccins contre la grippe disponibles cette semaine.",
+  "notice_lab": "Laboratoire ouvert le samedi de 8h00 à 12h00.",
+  "notice_app": "Téléchargez notre application MedConnect pour faciliter la réservation.",
   "footer_contact": "Contact",
-  "footer_links": "Quick Links",
-  "footer_follow": "Follow Us",
-  "link_about": "About",
-  "privacy": "Privacy Policy",
-  "terms": "Terms of Service",
-  "rights_reserved": "All rights reserved.",
+  "footer_links": "Liens rapides",
+  "footer_follow": "Suivez-nous",
+  "link_about": "À propos",
+  "privacy": "Politique de confidentialité",
+  "terms_page_title": "Conditions d'utilisation – MedConnect",
+  "rights_reserved": "Tous droits réservés.",
   "doctors_title": "Trouver un médecin",
   "search_placeholder": "Rechercher par nom...",
   "filter_all": "Toutes les spécialités",
-  "spec_cardiology": "Cardiologie",
-  "spec_dermatology": "Dermatologie",
-  "spec_pediatrics": "Pédiatrie",
+  "spec_cardiology_role": "Cardiologue",
+  "spec_dermatology_role": "Dermatologue",
+  "spec_pediatrics_role": "Pédiatre",
   "doc_smith": "Dr. Jane Smith",
   "doc_lee": "Dr. Michael Lee",
   "doc_patel": "Dr. Aisha Patel",
@@ -76,7 +77,7 @@
   "portal_intro": "Accédez à vos dossiers médicaux, rendez-vous et ordonnances en toute sécurité.",
   "portal_login": "Connexion",
   "portal_register": "Inscription",
-  "label_email": "Email",
+  "label_email": "E-mail",
   "label_password": "Mot de passe",
   "label_name": "Nom complet",
   "label_phone": "Numéro de téléphone",
@@ -94,7 +95,7 @@
   "about_value3": "Innovation dans les solutions de santé.",
   "about_value4": "Respect et inclusivité pour toutes les communautés.",
   "contact_title": "Contactez-nous",
-  "contact_intro": "Vous avez des questions ou besoin d'aide ? Contactez-nous via le formulaire ci-dessous ou nos coordonnées.",
+  "contact_intro": "Veuillez saisir vos informations et nous vous répondrons.",
   "label_message": "Message",
   "btn_send": "Envoyer le message",
   "contact_info": "Nos coordonnées",
@@ -106,7 +107,7 @@
   "notice2_desc": "Notre laboratoire sera ouvert le samedi de 8h00 à 12h00.",
   "notice3_title": "Application MedConnect",
   "notice3_desc": "Téléchargez notre application mobile pour une réservation plus facile et un accès rapide aux résultats.",
-  "privacy": "Politique de confidentialité",
+  "privacy_politic": "Politique de confidentialité",
   "privacy_intro": "Nous accordons de l'importance à votre vie privée et nous engageons à protéger vos données personnelles.",
   "privacy_data_title": "Données que nous collectons",
   "privacy_data_text": "Nous collectons des informations personnelles telles que votre nom, votre email, votre numéro de téléphone et vos données médicales lorsque vous utilisez nos services.",
@@ -121,5 +122,146 @@
   "terms_page_section2_title": "Responsabilités de l'utilisateur",
   "terms_page_section2_text": "Vous êtes responsable de fournir des informations personnelles exactes et de garder vos identifiants de connexion sécurisés.",
   "terms_page_section3_title": "Limitation de responsabilité",
-  "terms_page_section3_text": "MedConnect n'est pas responsable des résultats médicaux. Les services sont fournis en tant que plateforme pour connecter les patients aux prestataires de soins de santé."
+  "terms_page_section3_text": "MedConnect n'est pas responsable des résultats médicaux. Les services sont fournis en tant que plateforme pour connecter les patients aux prestataires de soins de santé.",
+  "btn_view": "Voir",
+  "btn_cancel": "Annuler",
+  "confirm_cancel_appt": "Annuler ce rendez-vous ?",
+  "cancel_failed": "Impossible d'annuler le rendez-vous.",
+  "cancel_success": "Rendez-vous annulé.",
+  "about_page_title": "À propos de MedConnect – MedConnect",
+  "appt_title": "Prendre un rendez-vous",
+  "btn_back": "Retour",
+  "btn_next": "Suivant",
+  "confirm_msg": "Veuillez vérifier vos informations avant de confirmer :",
+  "contact_page_title": "Contactez-nous – MedConnect",
+  "dashboard_appointments": "Rendez-vous",
+  "dashboard_intro": "Chargement de votre tableau de bord...",
+  "dashboard_no_appointments": "Aucun rendez-vous à afficher.",
+  "dashboard_no_reports": "Aucun rapport de laboratoire à afficher.",
+  "dashboard_page_title": "Tableau de bord – MedConnect",
+  "dashboard_reports": "Rapports de laboratoire",
+  "dashboard_title": "Tableau de bord",
+  "doctor_profile": "Profil du médecin – MedConnect",
+  "doctors_page_title": "Trouver des médecins – MedConnect",
+  "label_date": "Date",
+  "label_doctor": "Médecin",
+  "label_phone_number": "Numéro de téléphone",
+  "label_specialty": "Spécialité",
+  "label_time": "Heure",
+  "labs_page_title": "Services de laboratoire – MedConnect",
+  "loading": "Chargement...",
+  "nav_menu": "Menu principal",
+  "nav_account": "Compte",
+  "nav_portal": "Connexion",
+  "opt_select_doctor": "-- Sélectionner un médecin --",
+  "opt_select_specialty": "-- Sélectionner une spécialité --",
+  "opt_select_time": "-- Sélectionner une heure --",
+  "pharmacy_page_title": "Pharmacie – MedConnect",
+  "portal_page_title": "Portail Patient – MedConnect",
+  "privacy_page_title": "Politique de confidentialité – MedConnect",
+  "qa_dashboard": "Tableau de bord",
+  "step_confirm": "4. Confirmer",
+  "step_date": "2. Date",
+  "step_doctor": "1. Médecin",
+  "step_patient": "3. Patient",
+  "th_action": "Action",
+  "th_date": "Date",
+  "th_file": "Fichier",
+  "th_name": "Nom",
+  "th_patient": "Patient",
+  "th_phone": "Téléphone",
+  "th_status": "Statut",
+  "th_time": "Heure",
+  "th_type": "Type",
+  "th_uploaded": "Téléversé",
+  "api_missing": "Le service est temporairement indisponible.",
+  "doctors_empty": "Aucun médecin trouvé.",
+  "doctors_load_error": "Impossible de charger les médecins.",
+  "labs_error": "Impossible de charger les forfaits.",
+  "labs_loading": "Chargement des forfaits...",
+  "labs_includes": "Comprend",
+  "labs_show_all": "Tout afficher",
+  "labs_show_less": "Afficher moins",
+  "labs_request_quote": "Demander un devis",
+  "labs_preparation_default": "Préparation : non précisée",
+  "contact_type_required": "Le type est requis.",
+  "contact_type_invalid": "Sélectionnez un type de demande valide.",
+  "contact_first_required": "Le prénom est requis.",
+  "contact_last_required": "Le nom est requis.",
+  "contact_email_required": "L'e-mail est requis.",
+  "contact_email_invalid": "Entrez une adresse e-mail valide.",
+  "contact_phone_required": "Le numéro de téléphone est requis.",
+  "contact_phone_invalid": "Entrez un numéro de téléphone valide.",
+  "contact_message_required": "Le message est requis.",
+  "contact_consent_required": "Le consentement est requis.",
+  "contact_sending": "Envoi...",
+  "contact_submit": "Envoyer",
+  "contact_success": "Message envoyé avec succès.",
+  "contact_error": "Impossible d'envoyer le message.",
+  "rq_file_required": "Le fichier est requis",
+  "rq_file_types": "Types acceptés : pdf, jpg, jpeg, png.",
+  "rq_file_size": "Le fichier dépasse 5 Mo.",
+  "rq_file_empty": "Le fichier est vide.",
+  "rq_only_one_file": "Un seul fichier est autorisé.",
+  "rq_first_required": "Le prénom est requis.",
+  "rq_last_required": "Le nom est requis.",
+  "rq_gender_required": "Le sexe est requis.",
+  "rq_dob_required": "La date de naissance est requise.",
+  "rq_phone_required": "Le numéro de téléphone est requis.",
+  "rq_phone_invalid": "Entrez un numéro de téléphone valide.",
+  "rq_email_required": "L'e-mail est requis.",
+  "rq_email_invalid": "Entrez une adresse e-mail valide.",
+  "rq_categories_required": "Sélectionnez au moins une catégorie de service.",
+  "rq_message_required": "Le message est requis.",
+  "rq_consent_required": "Le consentement est requis.",
+  "rq_id_required": "Le document d'identité est requis.",
+  "rq_submitting": "Soumission...",
+  "rq_submit_error": "Impossible d'envoyer la demande.",
+  "rq_submit_success": "Demande envoyée avec succès.",
+  "rq_submit": "Envoyer",
+  "portal_login_failed": "Échec de la connexion",
+  "portal_register_failed": "Échec de l'inscription",
+  "portal_forgot_email_required": "L'e-mail est requis.",
+  "portal_forgot_sending": "Envoi...",
+  "portal_forgot_submit": "Envoyer",
+  "portal_forgot_error": "Impossible d'envoyer la demande.",
+  "portal_forgot_success": "Votre demande a été reçue. Nous vous contacterons bientôt.",
+  "appt_missing_fields": "Champs obligatoires manquants : ",
+  "appt_forbidden": "Vous n'êtes pas autorisé à créer un rendez-vous avec ce compte.",
+  "appt_time_unavailable": "Le créneau sélectionné n'est plus disponible. Veuillez en choisir un autre.",
+  "appt_error_booking": "Erreur lors de la réservation : ",
+  "appt_unknown_error": "Erreur inconnue",
+  "appt_unexpected_response": "Rendez-vous réservé, mais la réponse est inattendue.",
+  "appt_complete_required": "Veuillez remplir les champs obligatoires.",
+  "appt_doctors_load_error": "Impossible de charger la liste des médecins.",
+  "appt_doctor_unavailable_day": "Le médecin n'est pas disponible ce jour-là.",
+  "appt_confirm": "Confirmer",
+  "appt_next": "Suivant",
+  "dashboard_load_error": "Impossible de charger votre tableau de bord. Veuillez vous reconnecter.",
+  "dashboard_intro_doctor": "Votre planning et les actions patients sont prêts.",
+  "dashboard_intro_admin": "Les outils de gestion et de supervision sont disponibles.",
+  "dashboard_intro_patient": "Vos rendez-vous et rapports à venir sont prêts.",
+  "dashboard_nav_appointments": "Rendez-vous",
+  "dashboard_nav_reports": "Rapports de laboratoire",
+  "dashboard_nav_summary": "Résumé",
+  "dashboard_nav_doctors": "Médecins",
+  "dashboard_nav_quotes": "Demandes de devis",
+  "dashboard_load_appointments_error": "Impossible de charger les rendez-vous.",
+  "dashboard_load_reports_error": "Impossible de charger les rapports de laboratoire.",
+  "dashboard_appt_details": "Détails du rendez-vous",
+  "doc_profile_page_title": "Profil du médecin - MedConnect",
+  "doc_profile_working_hours": "Horaires de consultation",
+  "doc_profile_professional_details": "Détails professionnels",
+  "doc_profile_experience": "Expérience",
+  "doc_profile_certifications": "Certifications",
+  "doc_profile_specialisations": "Spécialisations",
+  "doc_profile_about": "À propos",
+  "doc_profile_book": "Prendre rendez-vous",
+  "doc_profile_cta_title": "Prêt à réserver ?",
+  "doc_profile_cta_body": "Planifiez un rendez-vous avec ce médecin en quelques minutes.",
+  "doc_profile_not_found": "Médecin introuvable",
+  "doc_profile_not_found_body": "Nous n'avons pas trouvé ce profil de médecin. Retournez à la page des médecins.",
+  "doc_profile_back": "Retour aux médecins",
+  "doc_profile_not_specified": "Non renseigné",
+  "doc_profile_unknown": "Médecin"
 }
